--- a/Report/Bibliography.bib
+++ b/Report/Bibliography.bib
@@ -36,7 +36,7 @@ year = {2004},
     note = {Available: \url{https://docs.opencv.org/2.4/doc/tutorials/imgproc/imgtrans/canny_detector/canny_detector.html}. [Accessed: \today]}
 }
 @misc{opencvffilldemo, 
-    title={OpenCV: ffilldemo.cpp}, 
+    title={{OpenCV: ffilldemo.cpp}}, 
     author = {{OpenCV Documentation}},
     note = {Available: \url{https://docs.opencv.org/3.3.0/d5/d26/ffilldemo_8cpp-example.html}. [Accessed: \today]}, 
     year = {2017}
@@ -45,7 +45,7 @@ year = {2004},
     title={Biologically Inspired Robots: A Vision System Inspired By The Human Eye},
     year={2016},
     author={Gupta, M and Hennecker, F and Isaacs, T and Sharhan, M and Stauskis, L},
-    note ={Electronics and Computer Science, University of Southampton}
+    note ={ELEC6212 Report, Electronics and Computer Science, University of Southampton}
 }
 @misc{abstraction3rdyear,
     title={Data Abstraction for Low-Bandwidth Communication},
@@ -83,7 +83,7 @@ title = {Implementing a Novel Approach an Convert Audio Compression to Text Codi
     note = {Available: \url{http://www.bmva.org/visionoverview}. [Accessed: \today]}
 }
 @misc{OpenCV,
-    title={OpenCV},
+    title={{OpenCV}},
     author = {{OpenCV team}},
     year = {2017},
     note = {Available: \url{https://opencv.org/}. [Accessed: \today]}
@@ -120,7 +120,7 @@ title = {Implementing a Novel Approach an Convert Audio Compression to Text Codi
   year={2009}
 }
 @misc{Canny1Source,
-    title={OpenCV Canny Edge Detection Tutorial},
+    title={{OpenCV Canny Edge Detection Tutorial}},
     author = {Alexander Mordvintsev and Abid, K.},
     year = {2013},
     note = {Available: \url{http://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_imgproc/py_canny/py_canny.html}. [Accessed: \today]}
@@ -149,7 +149,7 @@ title = {Implementing a Novel Approach an Convert Audio Compression to Text Codi
     title={Sobol sequence},
     author = {Wikipedia},
     year = {2017},
-    note = {Available: \url{https://en.wikipedia.org/wiki/Sobol_sequence/}. [Accessed: \today]}
+    note = {Available: \url{https://en.wikipedia.org/wiki/Sobol_sequence}. [Accessed: \today]}
 }
 @misc{FrameRate,
     title = {The Importance of Frame Rates},
@@ -164,10 +164,10 @@ title = {Implementing a Novel Approach an Convert Audio Compression to Text Codi
   year={2013}
 }
 @misc{DORA, 
-    title={Oculus rift-based system brings true immersion to telepresence robots}, 
-    author = {E. Ackerman},
+    title={{DORA}}, 
+    author = {Peter Zachares and Emre Tanirgan and Daleroy Sibanda and John Nappo},
     year = {2015},
-    note = {Available: \url{http://spectrum.ieee.org/automaton/robotics/robotics-hardware/upenn-dor a-platform}. [Accessed: \today]}
+    note = {Available: \url{http://doraplatform.com/}. [Accessed: \today]}
 }
 @inproceedings{McGlynn,
  author = {McGlynn, Sean A. and Rogers, Wendy A.},
@@ -193,13 +193,13 @@ title = {Implementing a Novel Approach an Convert Audio Compression to Text Codi
     note = {Available: \url{https://www.vrs.org.uk/virtual-reality/what-is-virtual-reality.html}. [Accessed: \today]}
 }
 @misc{Oculus, 
-    title={Oculus Rift Homepage}, 
+    title={{Oculus Rift Homepage}}, 
     author = {{Oculus}},
     year = {2017},
     note = {Available: \url{https://www.oculus.com/rift/}. [Accessed: \today]}
 }
 @misc{Vive, 
-    title={HTC Vive Homepage}, 
+    title={{HTC Vive Homepage}}, 
     author = {{HTC}},
     year = {2017},
     note = {Available: \url{https://www.vive.com/uk/}. [Accessed: \today]}
@@ -227,7 +227,7 @@ title = {Implementing a Novel Approach an Convert Audio Compression to Text Codi
     note = {Available: \url{https://robonaut.jsc.nasa.gov/R2/}. [Accessed: \today]}
 }
 @misc{FPV, 
-    title={FPV Starting Guide}, 
+    title={{FPV Starting Guide}}, 
     author = {{RCExplorer}},
     year = {2009},
     note = {Available: \url{https://rcexplorer.se/educational/2009/09/fpv-starting-guide/}. [Accessed: \today]}
@@ -289,26 +289,26 @@ title = {Implementing a Novel Approach an Convert Audio Compression to Text Codi
   publisher={Elsevier}
 }
 @misc{deptheg, 
-    title={Dense Disparity Map Estimation Respecting 
-Image Discontinuities}, 
-    author = {L.Alvarez, R.Deriche, J.Sánchez, J.Weickert},
+    title={{Dense Disparity Map Estimation Respecting 
+Image Discontinuities}}, 
+    author = {L Alvarez and R Deriche and J Sánchez and J Weickert},
     year = {2000},
     note = {Available: \url{http://serdis.dis.ulpgc.es/~lalvarez/research/demos/StereoFlow/index.html}. [Accessed: \today]}
 }
 @book{linda2001stockman,
-  title={Stockman, Computer vision},
-  author={Linda, G and Shapiro, C George},
+  title={Computer vision},
+  author={Linda Shapiro and George Stockman},
   year={2001},
   publisher={Prentice Hall, Upper Saddle River, NJ}
 }
 @misc{distort, 
     title={Camera Calibration}, 
-    author = {{opencv dev team}},
+    author = {{OpenCV Dev Team}},
     year = {2014},
     note = {Available: \url{https://docs.opencv.org/3.0-beta/doc/py_tutorials/py_calib3d/py_calibration/py_calibration.html#calibration}. [Accessed: \today]}
 }
 @misc{stereocal, 
-    title={Stereo calibration using C++ and OpenCV}, 
+    title={{Stereo calibration using C++ and OpenCV}}, 
     author = {S Ghost},
     year = {2016},
     note = {Available: \url{http://sourishghosh.com/2016/stereo-calibration-cpp-opencv/}. [Accessed: \today]}
@@ -331,7 +331,7 @@ Image Discontinuities},
   publisher={Wisconsin College of Engineering}
 }
 @misc{libimagequant, 
-    title={{libimagequant-Image Quantization Library}}, 
+    title={{libimagequant---Image Quantization Library}}, 
     author = {Kornel Lesiński},
     year = {2017},
     note = {Available: \url{https://pngquant.org/lib/}. [Accessed: \today]}
@@ -348,13 +348,13 @@ Image Discontinuities},
   year={1980}
 }
 @misc{unreal, 
-    title={What is unreal engine 4?}, 
+    title={{What is Unreal Engine 4?}}, 
     author = {{Epic Games}},
     year = {2018},
     note = {Available: \url{https://www.unrealengine.com/en-US/what-is-unreal-engine-4}. [Accessed: \today]}
 }
 @misc{calibgit, 
-    title={Stereo camera calibration using OpenCV and C++}, 
+    title={{OpenCV C++ Stereo Camera Calibration}}, 
     author = {{Sourish Ghost}},
     year = {2016},
     note = {Available: \url{https://github.com/sourishg/stereo-calibration}. [Accessed: \today]}
@@ -420,4 +420,20 @@ Image Discontinuities},
     author = {Peter Selinger},
     year = {2017},
     note = {Available: \url{http://potrace.sourceforge.net/}. [Accessed: \today]}
+}
+@article{sheridan1989telerobotics,
+  title={Telerobotics},
+  author={Sheridan, Thomas B},
+  journal={Automatica},
+  volume={25},
+  number={4},
+  pages={487--507},
+  year={1989},
+  publisher={Elsevier}
+}
+@book{sayood2005introduction,
+  title={Introduction to data compression},
+  author={Sayood, Khalid},
+  year={2005},
+  publisher={Elsevier}
 }
