--- a/Report/Appendices/Archive.tex
+++ b/Report/Appendices/Archive.tex
@@ -2,3 +2,150 @@
 \lhead{\emph{Design Archive Contents}}
 \label{appendix:archive}
 
+\begin{forest}
+  for tree={
+    font=\ttfamily,
+    grow'=0,
+    child anchor=west,
+    parent anchor=south,
+    anchor=west,
+    calign=first,
+    inner xsep=7pt,
+    edge path={
+      \noexpand\path [draw, \forestoption{edge}]
+      (!u.south west) +(7.5pt,0) |- (.child anchor) pic {} \forestoption{edge label};
+    },
+    before typesetting nodes={
+      if n=1
+        {insert before={[,phantom]}}
+        {}
+    },
+    fit=band,
+    before computing xy={l=15pt},
+  }  
+[DesignArchive
+  [CompressionTests
+  	[imagequant
+  	]
+  	[PotraceImage
+  	]
+  ]
+  [CVTests
+    [AbstractWCamNCircleAverage
+    ]
+    [AbstractWCircleAverage
+    ]
+    [AverageColour
+    	[1Point
+    	]
+    	[2Circle
+    	]
+    	[3Flood
+    	]
+    ]
+    [Contours
+    ]
+    [DepthMap
+    ]
+    [FrameRate
+    ]
+    [LibelasTest
+    ]
+  ]
+  [Hardware
+  ]
+  [Images
+  ]
+]
+\end{forest}
+\begin{forest}
+  for tree={
+    font=\ttfamily,
+    grow'=0,
+    child anchor=west,
+    parent anchor=south,
+    anchor=west,
+    calign=first,
+    inner xsep=7pt,
+    edge path={
+      \noexpand\path [draw, \forestoption{edge}]
+      (!u.south west) +(7.5pt,0) |- (.child anchor) pic {} \forestoption{edge label};
+    },
+    before typesetting nodes={
+      if n=1
+        {insert before={[,phantom]}}
+        {}
+    },
+    fit=band,
+    before computing xy={l=15pt},
+  }  
+[
+  [FinalBuilds
+  	[Abstraction
+  		[Camera
+  		]
+  		[Image
+  		]
+  	]
+  	[RoverToUbuntu
+  		[Rover
+  		]
+  		[UbuntuServer
+  		]
+  	]
+  	[RoverToUnreal
+  		[Rover
+  		]
+  		[UnrealComponents
+  		]
+  	]
+  ]
+  [UDPTests
+  	[CamReceive
+  	]
+  	[CamSend
+  	]
+  	[CamSendThreaded
+  	]
+  	[ImageReceive
+  	]
+  	[ImageSend
+  	]
+  ]
+]
+\end{forest}
+\clearpage
+\begin{forest}
+  for tree={
+    font=\ttfamily,
+    grow'=0,
+    child anchor=west,
+    parent anchor=south,
+    anchor=west,
+    calign=first,
+    inner xsep=7pt,
+    edge path={
+      \noexpand\path [draw, \forestoption{edge}]
+      (!u.south west) +(7.5pt,0) |- (.child anchor) pic {} \forestoption{edge label};
+    },
+    before typesetting nodes={
+      if n=1
+        {insert before={[,phantom]}}
+        {}
+    },
+    fit=band,
+    before computing xy={l=15pt},
+  }  
+[
+  [SystemTests
+  	[FPSTest
+  	]
+  	[JPGSystem
+  		[rover
+  		]
+  		[server
+  		]
+  	]
+  ]
+]
+\end{forest}
